xfstk-downloader (1.6.0)

  * [Bug fix] BZ192533 - DNX support to read eMMC contents
  * [New Feature] - eMMC Feature for MERR/MOFD

  -- Intel Corporation <xfstk@intel.com>  Fri, 27 Jun 2014 08:00:00 -0700

xfstk-downloader (1.5.6) unstable; urgency=low

  * [Bug fix] BZ163978 - XFSTK reports failure during CSDB update
  * [Bug fix] BZ185826 - Merrifield and Moorefield: Unable to write CSDB payload when provisioning the CSDB payload with IFWI
  * [Bug fix] BZ191640 - CSDB Response payload and Halt Request not handled by xFSTK

 -- Intel Corporation <xfstk@intel.com>  Thu, 29 May 2014 08:00:00 -0700


xfstk-downloader (1.5.5) unstable; urgency=low

  * [New Feature] - Added support for customer footer (MOFD platforms only).

 -- Intel Corporation <xfstk@intel.com>  Wed, 14 May 2014 08:00:00 -0700

xfstk-downloader (1.5.4) unstable; urgency=low

  * [Bug fix] BZ191905 - xfstk 1.5.3 crash on Ubuntu 12.04 and 10.04

 -- Intel Corporation <xfstk@intel.com>  Wed, 07 May 2014 08:00:00 -0700

xfstk-downloader (1.5.3) unstable; urgency=low

  * [New Feature] required S3 security update

 -- Intel Corporation <xfstk@intel.com>  Wed, 02 Apr 2014 08:00:00 -0700

xfstk-downloader (1.5.2) unstable; urgency=low

  * [Bug fix] BZ166680  - iSoC must support win8 32 & 64 bits
  * [Bug fix] BZ166686  - xFSTK Downloader must support win8 64
  * [New Feature] xFSTK Downloader & iSoC Driver support for Win 8/8.1 32/64bits
  * [New Feature] iSoC USB Driver support for Moorefiled


 -- Intel Corporation <xfstk@intel.com>  Wed, 26 jan 2014 08:00:00 -0700

xfstk-downloader (1.5.1) unstable; urgency=low

  * [Bug fix] BZ159032 - xFSTK Downloader to include DCSDB & UCSDB for ANN

 -- Intel Corporation <xfstk@intel.com>  Tue, 07 jan 2014 08:00:00 -0700

xfstk-downloader (1.5.0) unstable; urgency=low

  * [Bug fix] BZ126119 - xfstk-Downloader: Progress message jumps from 12 to 100 on Merr FW Download.