@@ -1,3 +1,9 @@
+xfstk-downloader (1.7.0)
+
+  * [New Feature] - OS DnX is now optional for OS flashing Merr/Moor devices
+
+  -- Intel Corporation <xfstk@intel.com>  Thu, 10 Jul 2014 08:00:00 -0700
+
 xfstk-downloader (1.6.0)
 
   * [Bug fix] BZ192533 - DNX support to read eMMC contents
